--- a/HR_analysis_GPS_LC_newtags_2019-10-31.Rmd
+++ b/HR_analysis_GPS_LC_newtags_2019-10-31.Rmd
@@ -102,11 +102,6 @@ Then do some Argos filtering both for inside and inout.
 
 ```{r}
 
-ID.names <- function(name){
-  x <- unlist(strsplit(name, '_'))[1]
-  return(x)
-}
-
 # get the beginning and end dates of each data file
 get.dates.1 <- function(data.file){
   data.file$Date1 <- as.POSIXct(strptime(data.file$TransmissionDateTime,
@@ -232,7 +227,7 @@ for (d in 1:length(dNames)){
 
 ```
   
-Then, split them into 4-hour segments. This part will be split into GPS and Argos data files:
+Split the data into GPS or ARGOS first, then, split them into 4-hour segments. 
 
 ```{r}
 d <- k0 <- k1 <- k2 <- 1
@@ -313,27 +308,21 @@ In this chunk, I summarize how many of data points were removed for each telemet
 ```{r}
 pre.summary <- get.summary.1(dNames[1])
 
-if (!file.exists(paste0("data/pre_sample_summary_", 
-                        run.date, ".csv")))
+if (!file.exists("data/pre_sample_summary.csv"))
   write.csv(pre.summary$raw.summary,
-            paste0("data/pre_sample_summary_", 
-                   run.date, ".csv"),
+            "data/pre_sample_summary.csv",
             row.names = F, 
             quote = F)
 
-if (!file.exists(paste0("data/Pre_GPS_", 
-                        run.date, ".csv")))
+if (!file.exists("data/pre_sample_GPS_summary.csv"))
   write.csv(pre.summary$GPS.summary, 
-            paste0("data/Pre_GPS_", 
-                   run.date, ".csv"),
+            "data/pre_sample_GPS_summary.csv",
             row.names = F,
             quote = F)
 
-if (!file.exists(paste0("data/Pre_ARGOS_", 
-                        run.date, ".csv")))
+if (!file.exists("data/pre_sample_ARGOS_summary.csv"))
   write.csv(pre.summary$ARGOS.summary, 
-            paste0("data/Pre_ARGOS_", 
-                   run.date, ".csv"),
+            "data/pre_sample_ARGOS_summary.csv",
             row.names = F,
             quote = F)
 
@@ -419,7 +408,7 @@ plot(map.pre)
 
 ```
 
-Using only GPS data that were included in the analysis:
+Next plot is using only GPS data that were included in the analysis. Note no data points north of 32.66N. 
 
 ```{r}
 map.pre.GPS <- map.sdbay.zm + 
@@ -448,7 +437,7 @@ if (save.figure)
 plot(map.pre.GPS)
 ```
 
-Using only ARGOS data that were included in the analysis:
+Next plot is using only ARGOS data that were included in the analysis:
 
 ```{r}
 map.pre.ARGOS <- map.sdbay.zm + 
@@ -491,31 +480,26 @@ post.GPS <- rbind(post.summary$GPS, new.summary$GPS) %>%
 post.ARGOS <- rbind(post.summary$ARGOS, new.summary$ARGOS) %>%
   filter(Lat1 < 32.66)
 
-if (!file.exists(paste0("data/post_sample_summary_", 
-                        run.date, ".csv")))
+if (!file.exists("data/post_sample_summary.csv"))
   write.csv(rbind(post.summary$raw.summary, new.summary$raw.summary),
-            paste0("data/post_sample_summary_", 
-                   run.date, ".csv"),
+            "data/post_sample_summary.csv",
             row.names = F, 
             quote = F)
 
-if (!file.exists(paste0("data/Post_GPS_", 
-                        run.date, ".csv")))
+if (!file.exists("data/post_sample_GPS_summary.csv"))
   write.csv(rbind(post.summary$GPS.summary, new.summary$GPS.summary), 
-            paste0("data/Post_GPS_", 
-                   run.date, ".csv"),
+            "data/post_sample_GPS_summary.csv",
             row.names = F,
             quote = F)
 
-if (!file.exists(paste0("data/Post_ARGOS_", 
-                        run.date, ".csv")))
+if (!file.exists("data/post_sample_ARGOS_summary.csv"))
   write.csv(rbind(post.summary$ARGOS.summary, new.summary$ARGOS.summary), 
-            paste0("data/Post_ARGOS_", 
-                   run.date, ".csv"),
+            "data/post_sample_ARGOS_summary.csv",
             row.names = F,
             quote = F)
 ```
 
+Next plot uses all data points. 
 
 ```{r}
 
@@ -549,6 +533,7 @@ if (save.figure)
 plot(map.post)
 ```
 
+Next plot uses filtered data. 
 
 ```{r}
 map.post.GPS <- map.sdbay.zm + 
@@ -577,7 +562,7 @@ if (save.figure)
 plot(map.post.GPS)
 ```
 
-Using only ARGOS data that were included in the analysis:
+Next plot is using only ARGOS data that were included in the analysis:
 
 ```{r}
 map.post.ARGOS <- map.sdbay.zm + 
@@ -624,23 +609,23 @@ The algorithm does not converge for ARGOS data.
 Do the same with post dataset - choose those with at least min_n data points. 
 
 ```{r}
-post.GPS.kd <- HR.analysis.step1(min_n, post.summary$GPS, tagproj, grid = grid.value)
-post.ARGOS.kd <- HR.analysis.step1(min_n, post.summary$ARGOS, tagproj, grid = grid.value)
+post.GPS.kd <- HR.analysis.step1(min_n, post.GPS, tagproj, grid = grid.value)
+post.ARGOS.kd <- HR.analysis.step1(min_n, post.ARGOS, tagproj, grid = grid.value)
 ```
 
-The algorithm does not converge for ARGOS data.
+The algorithm does not converge for ARGOS data for the LSCV method.  So, I will not use it. 
 
 Then the home range analysis starts here. First we need to figure out the smoothing parameter (bandwidth, h). There seem to be different methods and recommendations...
 
-First, least-squares cross validation on the pre data:
+First, least-squares cross validation on the pre GPS data:
 ```{r}
 plotLSCV(pre.GPS.kd$kd.LSCV)
 
 ```
 
-Looking at the GPS data, referecne or optimum bandwidth is ~248 (see pre.kd.GPS\$kd.href@h), whereas the LSCV comes back with h = 27.5 (Pre.kd.GPS\$kd.LSCV@h). According to Kie (2013), we should decrease href in increments of 0.10 and the best value is the smallest increment of href that 1. resulted in a contiguous rather than disjoint 95% kernel home-range polygon, and 2. contained no lacuna within the home range. 
+Looking at the GPS data, referecne or optimum bandwidth is ~248 (see pre.GPS.kd\$kd.href@h), whereas the LSCV comes back with h = 27.5 (pre.GPS.kd\$kd.LSCV@h). According to Kie (2013), we should decrease href in increments of 0.10 and the best value is the smallest increment of href that 1. resulted in a contiguous rather than disjoint 95% kernel home-range polygon, and 2. contained no lacuna within the home range. 
 
-Looking at these plots, multiplier = 0.4 may be the smallest value with a contiguous 95% UD.  This is found in h.pre.1 below. 
+Looking at these plots, multiplier = 0.4 may be the smallest value with a contiguous 95% UD.  This is found in pre.GPS.HR$h.1 below. 
 
 ```{r}
 h.multiplier <-  seq(from = 0.1, to = 0.95, by = 0.05) 
@@ -663,17 +648,9 @@ if (save.figure)
 ```
 
 
+I see there is a problem in plotting because of the boundary is a bit too small... Extending the southern end of the limits in the function fixed it.  
 
-Try the same process with ARGOS data. 
-
-```{r}
-plotLSCV(pre.ARGOS.kd$kd.LSCV)
-
-```
-
-This doesn't look good... Yikes!
-
-I see there is a problem in plotting because of the boundary is a bit too small... Extending the southern end of the limits in the function fixed it.  The multiplier of 0.7 makes a contiguous 95% HR. 
+For ARGOS data , the multiplier of 0.7 makes a contiguous 95% HR (pre.ARGOS.HR$h.1). 
 
 ```{r}
 pre.ARGOS.HR <- run.HR.analysis(pre.ARGOS.kd, 
@@ -703,13 +680,15 @@ plotLSCV(post.GPS.kd$kd.LSCV)
 
 ```
 
-Looking at the GPS data, referecne or optimum bandwidth is ~255 (see post.kd.GPS\$kd.href@h), whereas the LSCV comes back with h = 34.6 (Post.kd.GPS\$kd.LSCV@h). According to Kie (2013), we should decrease href in increments of 0.10 and the best value is the smallest increment of href that 1. resulted in a contiguous rather than disjoint 95% kernel home-range polygon, and 2. contained no lacuna within the home range. 
+Looking at the GPS data, referecne or optimum bandwidth is ~252 (see post.GPS.kd\$kd.href@h), whereas the LSCV comes back with h = 30.5 (post.GPS.kd\$kd.LSCV@h). According to Kie (2013), we should decrease href in increments of 0.10 and the best value is the smallest increment of href that 1. resulted in a contiguous rather than disjoint 95% kernel home-range polygon, and 2. contained no lacuna within the home range. The multiplier of 0.55 makes it (post.GPS.HR$h.1)
+
 ```{r}
 post.GPS.HR <- run.HR.analysis(post.GPS.kd, 
                                "post_GPS", 
                                grid.value, 
                                h.multiplier, 
                                shape.file.dir = "shapefiles_Nov2019/")
+
 plot(post.GPS.HR$h.adhoc$figure)
 
 if (save.figure)
@@ -719,15 +698,6 @@ if (save.figure)
          dpi = 600)
 
 ```
-
-Try the same process with ARGOS data:
-
-```{r}
-plotLSCV(post.ARGOS.kd$kd.LSCV)
-
-```
-
-This doesn't look good... Yikes!
 
 
 
@@ -746,7 +716,7 @@ if (save.figure)
          dpi = 600)
 ```
 
-The multiplier of 0.5 makes a contiguous 95% HR see h.post.1 below. 
+The multiplier of 0.45 makes a contiguous 95% HR (post.ARGOS.HR$h.1). 
 
 
 Compare between night and day and pre and post:
@@ -776,7 +746,9 @@ if (save.figure)
 
 ```
 
-multiplier = 0.5 may be good. See h.pre.GPS.day.1.
+multiplier = 0.5 may be good. See pre.GPS.HR.day$h.1.
+
+START FROM HERE ON 11/7/2019.  TEXT NEEDS TO BE FIXED AND ARGOS-BASED HR NEED TO BE COMPUTED.  I THINK GPS-BASED HR ANALYSES ARE DONE. 
 
 For night:
 ```{r}
@@ -788,17 +760,17 @@ plotLSCV(pre.GPS.kd.night$kd.LSCV)
 ```
 
 ```{r}
-pre.GPS.night <- run.HR.analysis(pre.GPS.kd.night, 
+pre.GPS.HR.night <- run.HR.analysis(pre.GPS.kd.night, 
                                  "pre_GPS_night", 
                                  grid.value, 
                                  h.multiplier, 
                                  shape.file.dir = "shapefiles_Nov2019/")
 
-plot(pre.GPS.night$h.adhoc$figure)
+plot(pre.GPS.HR.night$h.adhoc$figure)
 
 if (save.figure)
   ggsave(filename = "figures/map_pre_GPS_h_adhoc_night.png",
-         plot = pre.GPS.night$h.adhoc$figure,
+         plot = pre.GPS.HR.night$h.adhoc$figure,
          device = "png",
          dpi = 600)
 ```
@@ -962,11 +934,159 @@ if (!file.exists("RData/post_GPS_UD_night_byID.rds")){
 
 ```
 
-Bring in the body size information. This was done in deployment_table.R script and manually modified for missing data - some measurements were not collected when the tags were deployed so data from the closest captures were used.  Data were entered manually for three turtles in the Excel file: 52675 (all measurements) from 2007-01-23, 44366 (SCL and CCL) from 2009-02-26, and 126065 (Mass) from 2011-03-08).   
+Bring in the body size information. This was done in deployment_table_Nov2019.R script and manually modified for missing data - some measurements were not collected when the tags were deployed so data from the closest captures were used.  Data were entered manually for three turtles in the Excel file: 52675 (all measurements) from 2007-01-23, 44366 (SCL and CCL) from 2009-02-26, and 126065 (Mass) from 2011-03-08).   Also, sat tag IDs were modified. 
+126069 -> 12606905 5/13/2014
+126071 -> 12607106 6/26/2014
+126069 -> 12606907 7/24/2014
+126071 -> 12607107 7/24/2014
+21136/13183 -> 13183 This seems incorrect but it will be filtered out for now.
 
-Somehow, only 6 post animals get UD computed... need to look into why that is 2019-11-04...  
 ```{r}
-dat.table <- read.csv("data/all_sample_summary_size_2018-07-24.csv")
+col.def <- cols(Turtle_ID = col_integer(),
+                Year_caught = col_integer(),
+                Month_caught = col_integer(),
+                Day_caught = col_integer(),
+                Sex = col_factor(levels = c("F", "M", "U")),
+                Weight_kg = col_integer(),
+                Str_Carapace_Length_cm = col_double(),
+                Str_Carapace_Width_cm = col_double(),
+                Cur_Carapace_Length_cm = col_double(),
+                Cur_Carapace_Width_cm = col_double(),
+                Sat_Tag_ID = col_integer())
+
+# filter turtle_SDB for recent captures only. 
+turtle.SDB <- readr::read_csv("data/turtle_SDB_corrected.csv",
+                              col_types = col.def) %>%
+  mutate(ArgosID = Sat_Tag_ID)  %>%
+  mutate(Capture_Date = as.Date(paste0(Year_caught, '-',
+                                       Month_caught, '-',
+                                       Day_caught),
+                                format = '%Y-%m-%d')) %>% 
+  filter(Capture_Date > as.Date("2007-01-01")) -> turtle.SDB
+```
+
+Then combine it with pre data;
+
+```{r}
+file.date <- "2019-11-01"
+col.def <- cols(ArgosID = col_integer(),
+                Date1 = col_datetime(format = "%Y-%m-%d %H:%M:%S"),
+                n.days = col_double(),
+                n.relocations.all = col_integer(),
+                n.day.all = col_integer(),
+                n.night.all = col_integer())
+
+readr::read_csv(paste0("data/pre_sample_GPS_summary.csv"),
+                col_types = col.def)  %>% 
+  mutate(date = as.Date(Date1, 
+                        format = "%Y-%m-%d")) -> dat.table.pre
+
+# try to merge turtle.SDB and dat.table.pre:
+dat.list <- list()
+k <- 1
+for (k in 1:nrow(dat.table.pre)){
+  tmp.turtle.SDB <- filter(turtle.SDB, 
+                           ArgosID == dat.table.pre$ArgosID[k])
+  if (nrow(tmp.turtle.SDB) == 1){
+    tmp.turtle.SDB %>% transmute(ArgosID = dat.table.pre$ArgosID[k],
+                                 Turtle_ID = Turtle_ID,
+                                 Capture_Date = as.Date(Capture_Date,
+                                                        format = "%Y-%m-%d"),
+                                 Sex = Sex,
+                                 Mass_kg = Weight_kg,
+                                 SCL_cm = Str_Carapace_Length_cm,
+                                 SCW_cm = Str_Carapace_Width_cm,
+                                 CCL_cm = Cur_Carapace_Length_cm,
+                                 CCW_cm = Cur_Carapace_Width_cm) -> dat.list[[k]]
+  } else {
+    tmp.turtle.SDB %>% filter(Year_caught == year(dat.table.pre$Date1[k])) -> tmp.turtle.SDB
+    if (nrow(tmp.turtle.SDB == 1)){
+      tmp.turtle.SDB %>% transmute(ArgosID = dat.table.pre$ArgosID[k],
+                                   Turtle_ID = Turtle_ID,
+                                   Capture_Date = as.Date(Capture_Date,
+                                                          format = "%Y-%m-%d"),
+                                   Sex = Sex,
+                                   Mass_kg = Weight_kg,
+                                   SCL_cm = Str_Carapace_Length_cm,
+                                   SCW_cm = Str_Carapace_Width_cm,
+                                   CCL_cm = Cur_Carapace_Length_cm,
+                                   CCW_cm = Cur_Carapace_Width_cm) -> dat.list[[k]]
+    }
+  }
+}
+
+dat.pre.morph <- do.call("rbind", dat.list)
+
+dat.table.pre <- full_join(dat.table.pre, dat.pre.morph, by = "ArgosID")%>%
+  mutate(period = "pre")
+
+if (!file.exists("data/pre_sample_summary_size.csv"))
+  write.csv(dat.table.pre,
+            "data/pre_sample_summary_size.csv",
+            quote = F,
+            row.names = F)
+```
+
+
+Do the same for the post period. 
+```{r}
+readr::read_csv(paste0("data/post_sample_GPS_summary.csv"),
+                col_types = col.def)  %>% 
+  mutate(date = as.Date(Date1, 
+                        format = "%Y-%m-%d")) -> dat.table.post
+
+# try to merge turtle.SDB and dat.table.post:
+dat.list <- list()
+k <- 1
+for (k in 1:nrow(dat.table.post)){
+  tmp.turtle.SDB <- filter(turtle.SDB, 
+                           ArgosID == dat.table.post$ArgosID[k])
+  
+  if (nrow(tmp.turtle.SDB) == 1){
+    tmp.turtle.SDB %>% transmute(ArgosID = dat.table.post$ArgosID[k],
+                                 Turtle_ID = Turtle_ID,
+                                 Capture_Date = as.Date(Capture_Date,
+                                                        format = "%Y-%m-%d"),
+                                 Sex = Sex,
+                                 Mass_kg = Weight_kg,
+                                 SCL_cm = Str_Carapace_Length_cm,
+                                 SCW_cm = Str_Carapace_Width_cm,
+                                 CCL_cm = Cur_Carapace_Length_cm,
+                                 CCW_cm = Cur_Carapace_Width_cm) -> dat.list[[k]]
+  } else {
+    tmp.turtle.SDB %>% filter(Year_caught == year(dat.table.post$Date1[k])) -> tmp.turtle.SDB
+    if (nrow(tmp.turtle.SDB == 1)){
+      tmp.turtle.SDB %>% transmute(ArgosID = dat.table.post$ArgosID[k],
+                                   Turtle_ID = Turtle_ID,
+                                   Capture_Date = as.Date(Capture_Date,
+                                                          format = "%Y-%m-%d"),
+                                   Sex = Sex,
+                                   Mass_kg = Weight_kg,
+                                   SCL_cm = Str_Carapace_Length_cm,
+                                   SCW_cm = Str_Carapace_Width_cm,
+                                   CCL_cm = Cur_Carapace_Length_cm,
+                                   CCW_cm = Cur_Carapace_Width_cm) -> dat.list[[k]]
+    }
+  }
+}
+
+dat.post.morph <- do.call("rbind", dat.list)
+
+dat.table.post <- full_join(dat.table.post, dat.post.morph, by = "ArgosID")%>%
+  mutate(period = "post")
+
+if (!file.exists("data/post_sample_summary_size.csv"))
+  write.csv(dat.table.post,
+            "data/post_sample_summary_size.csv",
+            quote = F,
+            row.names = F)
+```
+
+
+NOt sure why some individuals' UDs are not computed even though there are > 50 data points... Need to look into these 2019-11-06  
+```{r}
+dat.table <- rbind(dat.table.pre, dat.table.post) %>% 
+  mutate(ID.f = ArgosID)
 
 pre.areas.df <- data.frame(ID.f = pre.GPS.kd$list.data$unique.ID,
                            area.50 = pre.GPS.UD.byID$area$area.50,
@@ -1000,25 +1120,24 @@ dat.table <- left_join(dat.table, areas.df, by = "ID.f") %>%
   left_join(., areas.night.df, by = "ID.f") %>%
   left_join(., areas.day.df, by = "ID.f")
 
-write.csv(dat.table, file = paste0("data/IDvsUDs_",
-                                   Sys.Date(), ".csv"), 
+write.csv(dat.table, file = "data/IDvsUDs.csv", 
           quote = F, row.names = F)
 
 ggplot(data = dat.table) +
   geom_point(aes(x = Mass_kg, 
-                 y = area.50/1000000,
+                 y = area.50,
                  color = period)) 
 ```
 
-
+Check one that didn't have UDs for day and night combined when there were sufficient sample sizes (n > 49). ArgosID 152322 spent some time north of 32.66N, therefore those data points were removed, resulting in only 40 available data points in the end.  So, the turtle needed to be removed from further analyses. 
 
 
 Plotting starts here:
 Make a plot for pre using all data:
 ```{r}
 
-pre.ver.50.df <- broom::tidy(spTransform(pre.HR$ver.50, CRS("+proj=longlat")))
-pre.ver.95.df <- broom::tidy(spTransform(pre.HR$ver.95, CRS("+proj=longlat")))
+pre.ver.50.df <- broom::tidy(spTransform(pre.GPS.HR$HR$ver.50, CRS("+proj=longlat")))
+pre.ver.95.df <- broom::tidy(spTransform(pre.GPS.HR$HR$ver.95, CRS("+proj=longlat")))
 
 map.pre.HR <- map.sdbay.zm + 
   geom_polygon(data = SDBay.df,
@@ -1065,8 +1184,8 @@ plot(map.pre.HR)
 Make a plot for pre day:
 ```{r}
 
-pre.day.ver.50.df <- broom::tidy(spTransform(pre.HR.day$ver.50, CRS("+proj=longlat")))
-pre.day.ver.95.df <- broom::tidy(spTransform(pre.HR.day$ver.95, CRS("+proj=longlat")))
+pre.day.ver.50.df <- broom::tidy(spTransform(pre.GPS.HR.day$HR$ver.50, CRS("+proj=longlat")))
+pre.day.ver.95.df <- broom::tidy(spTransform(pre.GPS.HR.day$HR$ver.95, CRS("+proj=longlat")))
 
 map.pre.day.HR <- map.sdbay.zm + 
   geom_polygon(data = SDBay.df,
@@ -1113,10 +1232,10 @@ plot(map.pre.day.HR)
 Make a plot for pre night:
 ```{r}
 
-pre.night.ver.50.df <- broom::tidy(spTransform(pre.HR.night$ver.50, 
+pre.night.ver.50.df <- broom::tidy(spTransform(pre.GPS.HR.night$HR$ver.50, 
                                                CRS("+proj=longlat")))
 
-pre.night.ver.95.df <- broom::tidy(spTransform(pre.HR.night$ver.95, 
+pre.night.ver.95.df <- broom::tidy(spTransform(pre.GPS.HR.night$HR$ver.95, 
                                                CRS("+proj=longlat")))
 
 map.pre.night.HR <- map.sdbay.zm + 
@@ -1164,8 +1283,8 @@ plot(map.pre.night.HR)
 Make a plot for post using all data:
 ```{r}
 
-post.ver.50.df <- broom::tidy(spTransform(post.HR$ver.50, CRS("+proj=longlat")))
-post.ver.95.df <- broom::tidy(spTransform(post.HR$ver.95, CRS("+proj=longlat")))
+post.ver.50.df <- broom::tidy(spTransform(post.GPS.HR$HR$ver.50, CRS("+proj=longlat")))
+post.ver.95.df <- broom::tidy(spTransform(post.GPS.HR$HR$ver.95, CRS("+proj=longlat")))
 
 map.post.HR <- map.sdbay.zm + 
   geom_polygon(data = SDBay.df,
@@ -1210,8 +1329,8 @@ plot(map.post.HR)
 Make a plot for post day:
 ```{r}
 
-post.day.ver.50.df <- broom::tidy(spTransform(post.HR.day$ver.50, CRS("+proj=longlat")))
-post.day.ver.95.df <- broom::tidy(spTransform(post.HR.day$ver.95, CRS("+proj=longlat")))
+post.day.ver.50.df <- broom::tidy(spTransform(post.GPS.HR.day$HR$ver.50, CRS("+proj=longlat")))
+post.day.ver.95.df <- broom::tidy(spTransform(post.GPS.HR.day$HR$ver.95, CRS("+proj=longlat")))
 
 map.post.day.HR <- map.sdbay.zm + 
   geom_polygon(data = SDBay.df,
@@ -1258,9 +1377,9 @@ plot(map.post.day.HR)
 Make a plot for post night:
 ```{r}
 
-post.night.ver.50.df <- broom::tidy(spTransform(post.HR.night$ver.50,
+post.night.ver.50.df <- broom::tidy(spTransform(post.GPS.HR.night$HR$ver.50,
                                                 CRS("+proj=longlat")))
-post.night.ver.95.df <- broom::tidy(spTransform(post.HR.night$ver.95,
+post.night.ver.95.df <- broom::tidy(spTransform(post.GPS.HR.night$HR$ver.95,
                                                 CRS("+proj=longlat")))
 
 map.post.night.HR <- map.sdbay.zm + 
@@ -1305,13 +1424,13 @@ map.pre.day.night <- map.sdbay.zm +
                    group = group),
                fill = "green",
                alpha = 0.5) +
-  geom_point(data = pre.all,
+  geom_point(data = pre.summary$GPS,
              aes(x = Lon1, y = Lat1, 
                  color = as.factor(day1night2)),
              alpha = 0.5)+ 
   xlab('Longitude') + ylab('Latitude') + 
   scale_color_discrete(labels = c("Day", "Night"),
-                       name = NULL) 
+                       name = NULL) + 
 
   theme(legend.title = NULL,
         legend.text = element_text(size = 8, vjust = 0))
@@ -1332,7 +1451,7 @@ map.post.day.night <- map.sdbay.zm +
                    group = group),
                fill = "green",
                alpha = 0.5) +
-  geom_point(data = post.all,
+  geom_point(data = post.summary$GPS,
              aes(x = Lon1, y = Lat1, 
                  color = as.factor(day1night2)),
              alpha = 0.5)+ 
@@ -1349,12 +1468,12 @@ UDs for individual turtles:
 ```{r}
 
 p.h.pre.eachID <- ggplot() + 
-  geom_polygon(data = pre.eachID.ver.95.df,
+  geom_polygon(data = pre.GPS.UD.byID$vert.95.df,
                aes(x = long, y = lat,
                    group = group),
                fill = "aquamarine4",
                alpha = 0.6) + 
-  geom_polygon(data = pre.eachID.ver.50.df,
+  geom_polygon(data = pre.GPS.UD.byID$vert.50.df,
                aes(x = long, y = lat,
                    group = group),
                fill = "red3",
@@ -1374,12 +1493,12 @@ plot(p.h.pre.eachID)
 ```{r}
 
 p.h.post.eachID <- ggplot() + 
-  geom_polygon(data = post.eachID.ver.95.df,
+  geom_polygon(data = post.GPS.UD.byID$vert.95.df,
                aes(x = long, y = lat,
                    group = group),
                fill = "aquamarine4",
                alpha = 0.6) + 
-  geom_polygon(data = post.eachID.ver.50.df,
+  geom_polygon(data = post.GPS.UD.byID$vert.50.df,
                aes(x = long, y = lat,
                    group = group),
                fill = "red3",
@@ -1400,76 +1519,76 @@ plot(p.h.post.eachID)
 Save figures:
 ```{r}
 if (save.figure){
-  ggsave(filename = paste0("figures/HR_pre_h_comp_", Sys.Date(), ".png"),
+  ggsave(filename = paste0("figures/HR_pre_h_comp_GPS_", Sys.Date(), ".png"),
        plot = h.adhoc.pre$figure,
        dpi = 600,
        device = "png")
-  ggsave(filename = paste0("figures/HR_post_h_comp_", Sys.Date(), ".png"),
+  ggsave(filename = paste0("figures/HR_post_h_comp_GPS_", Sys.Date(), ".png"),
          plot = h.adhoc.post$figure,
          dpi = 600,
          device = "png")
-  ggsave(filename = paste0("figures/HR_pre_day_h_comp_", Sys.Date(), ".png"),
+  ggsave(filename = paste0("figures/HR_pre_day_h_comp_GPS_", Sys.Date(), ".png"),
          plot = h.adhoc.pre.day$figure,
          dpi = 600,
          device = "png")
-  ggsave(filename = paste0("figures/HR_pre_night_h_comp_", Sys.Date(), ".png"),
+  ggsave(filename = paste0("figures/HR_pre_night_h_comp_GPS_", Sys.Date(), ".png"),
          plot = h.adhoc.pre.night$figure,
          dpi = 600,
          device = "png")
-  ggsave(filename = paste0("figures/HR_post_day_h_comp_", Sys.Date(), ".png"),
+  ggsave(filename = paste0("figures/HR_post_day_h_comp_GPS_", Sys.Date(), ".png"),
          plot = h.adhoc.post.day$figure,
          dpi = 600,
          device = "png")
-  ggsave(filename = paste0("figures/HR_post_night_h_comp_", Sys.Date(), ".png"),
+  ggsave(filename = paste0("figures/HR_post_night_h_comp_GPS_", Sys.Date(), ".png"),
          plot = h.adhoc.post.night$figure,
          dpi = 600,
          device = "png")
-  ggsave(filename = paste0("figures/HR_pre_h_", h.pre, "_", Sys.Date(), ".png"),
+  ggsave(filename = paste0("figures/HR_pre_h_", h.pre, "_GPS_", Sys.Date(), ".png"),
          plot = map.pre.HR,
          dpi = 600,
          device = "png")
   
-  ggsave(filename = paste0("figures/HR_post_h_", h.post, "_", Sys.Date(), ".png"),
+  ggsave(filename = paste0("figures/HR_post_h_", h.post, "_GPS_", Sys.Date(), ".png"),
          plot = map.post.HR,
          dpi = 600,
          device = "png")
   
   ggsave(filename = paste0("figures/HR_pre_day_h_", 
-                           h.pre.day, "_", Sys.Date(), ".png"),
+                           h.pre.day, "_GPS_", Sys.Date(), ".png"),
          plot = map.pre.day.HR,
          dpi = 600,
          device = "png")
   
   ggsave(filename = paste0("figures/HR_post_day_h_", 
-                           h.post.day, "_", Sys.Date(), ".png"),
+                           h.post.day, "_GPS_", Sys.Date(), ".png"),
          plot = map.post.day.HR,
          dpi = 600,
          device = "png")
   
   ggsave(filename = paste0("figures/HR_pre_night_h_", 
-                           h.pre.night, "_", Sys.Date(), ".png"),
+                           h.pre.night, "_GPS_", Sys.Date(), ".png"),
          plot = map.pre.night.HR,
          dpi = 600,
          device = "png")
   
   ggsave(filename = paste0("figures/HR_post_night_h_", 
-                           h.post.night, "_", Sys.Date(), ".png"),
+                           h.post.night, "_GPS_", Sys.Date(), ".png"),
          plot = map.post.night.HR,
          dpi = 600,
          device = "png")
   
-  ggsave(filename = paste0("figures/HR50_difference_", 
+  ggsave(filename = paste0("figures/HR50_difference_GPS_", 
                            Sys.Date(), ".png"),
          plot = hist.dif.50,
          dpi = 600,
          device = "png")
   
-  ggsave(filename = paste0("figures/HRbyID_pre_",
+  ggsave(filename = paste0("figures/HRbyID_pre_GPS_",
                            Sys.Date(), ".png"),
          plot = p.h.pre.eachID,
          dpi = 600,
          device = "png")
-  ggsave(filename = paste0("figures/HRbyID_post_",
+  ggsave(filename = paste0("figures/HRbyID_post_GPS_",
                            Sys.Date(), ".png"),
          plot = p.h.post.eachID,
          dpi = 600,
@@ -1477,6 +1596,6 @@ if (save.figure){
 }
 
 save(list = ls(),
-     file = paste0("RData/output_HR_analysis_", Sys.Date(), ".RData"))
+     file = paste0("RData/output_HR_analysis_GPS_", Sys.Date(), ".RData"))
 #plot(map.post.HR)
 ```
